C implementation, some bug

--- a/neural_network/1_hidden/784_128_10/C_implementation/Makefile
+++ b/neural_network/1_hidden/784_128_10/C_implementation/Makefile
@@ -1,13 +1,13 @@
 TARGET = main.out
 OBJECTS = main.o
-LINK = g++
-CXX = g++
-FLAGS = -std=c++11 -g -Wall -c
+LINK = gcc
+CXX = gcc
+FLAGS = -std=c99 -g -Wall -c
 
 $(TARGET): $(OBJECTS)
-	$(LINK) -o $(TARGET) $(OBJECTS)
-main.o: main.cpp main.h w1.h w2.h b1.h b2.h
-	$(CXX) $(FLAGS) -o main.o main.cpp
+	$(LINK) -o $(TARGET) $(OBJECTS) -lm
+main.o: main.c main.h w1.h w2.h b1.h b2.h
+	$(CXX) $(FLAGS) -o main.o main.c
 clean:
 	rm -f *.o 
 	rm *.out
